[project]
name = "snapchat-memories-toolkit"
version = "0.1.0"
description = "Import Snapchat export media with Apple-friendly metadata and optional split-video merging"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "piexif>=1.1.3",
    "pydantic>=2.12.0",
    "tqdm>=4.67.1",
]
